--- a/AV_tasks/styles.css
+++ b/AV_tasks/styles.css
@@ -11,8 +11,8 @@ body {
     color: white;
     font-family: "Libre Baskerville", serif;
     font-style: italic;
+    align-self: center;
 }
-
 .image-container {
     height: 500px;
 
